Enable Cohorts plugin

--- a/scripts/config.ini.php.tmpl
+++ b/scripts/config.ini.php.tmpl
@@ -161,6 +161,7 @@ Plugins[] = "Provider"
 Plugins[] = "QueuedTracking"
 Plugins[] = "SearchEngineKeywordsPerformance"
 Plugins[] = "SEOWebVitals"
+Plugins[] = "Cohorts"
 
 [QueuedTracking]
 notify_queue_threshold_single_queue = 250000
