chore: remove v4 plugins from config template

--- a/scripts/config.ini.php.tmpl
+++ b/scripts/config.ini.php.tmpl
@@ -27,7 +27,7 @@ enable_auto_update = 0
 ; among other things.
 multi_server_environment = 1
 
-always_load_commands_from_plugin=DbCommands,AdminCommands,LicenseKeyCommands
+always_load_commands_from_plugin=
 enable_trusted_host_check = 0
 <?php if (getenv('MATOMO_MAINTENANCE') == 'true') { ?>
 maintenance_mode = 1 
