--- a/scripts/config.ini.php.tmpl
+++ b/scripts/config.ini.php.tmpl
@@ -17,6 +17,10 @@ assume_secure_protocol = 1
 proxy_client_headers[] = HTTP_X_FORWARDED_FOR
 force_ssl = 1
 
+<?php if (getenv('MATOMO_LICENSE_KEY')) { ?>
+matomo_license_key = "${MATOMO_LICENSE_KEY}"
+<?php } ?>
+
 ; Scalingo MySQL does not allow LOAD DATA INFILE
 enable_load_data_infile = 0
 
